# nbdev_uv

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  settings.ini
.github/workflows/: ci.yaml  deploy.yaml
nbdev_uv/: _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
